# datp

./: .env.example  .gitignore  AGENTS.md  AUDIT_CODE.md  CITATION.cff  CLAUDE.md  COMMANDS.md  LICENSE  Makefile  README.md  docker-compose.sonarqube.yml  pyproject.toml  pyrightconfig.json  sonar-project.properties
.antigravitycli/: 84da366a-69ce-4428-927a-211e8b831608.json
.claude/: settings.json
.claude/agents/: code-quality-gate-agent.md  coding-agent.md  documentation-agent.md  drift-agent.md  drift-enforcer-agent.md  experiment-runner-agent.md  ieee-agent.md  implementation-agent.md  orchestrator-agent.md  orchestrator.md  paper-update-agent.md  refactor-agent.md  results-audit-agent.md  review-agent.md  reviewer-agent.md  scientific-contract-agent.md  spec-ticket-agent.md  sweep-guard-agent.md  test-agent.md  test-qa-agent.md  ticket-completion-auditor-agent.md  ticket-planner-agent.md
.claude/skills/: artifact-audit-skill.md  datp-invariant-check-skill.md  experiment-gate-skill.md  human-intervention-gate-skill.md  latex-paper-skill.md  long-run-monitoring-skill.md  paper-claim-discipline-skill.md  (+9 more)
.github/: copilot-instructions.md
AI Workflow/: AI_WORKFLOW_READINESS.md  AUDIT_CODE.md  CLEAN_CODE_RULES.md  MODEL_COST_POLICY.md  MOVE_PLAN.md  ORCHESTRATOR_PROMPT.md  PACKET_TEMPLATE.md  PATTERN_LEDGER.md  QUICK_START_COMMANDS.md  README.md  REFACTOR_MAP.md  REFACTOR_WORKBOARD.md  SCIENTIFIC_CONTRACT_AUDIT.md  SCIENTIFIC_DRIFT_LOCK.md  SESSION_HANDOFF_TEMPLATE.md  SESSION_POLICY.md  TEST_IMPACT_MAP.md  TEST_MOVE_PLAN.md  TEST_REFACTOR_MAP.md  WORKFLOW_AUDIT_PROTOCOL.md
Journal/: Journal_Extension_Master_Roadmap.md  claude_output_1.md  gemini_output_1.md  gemini_output_2.md  perplexity_2.md
paper/: DATP.tex  main.tex  references.bib
tests/: conftest.py
(+558 files in other folders)
